# advent-of-code-2022

./: README.md  advent_of_code_2022.opam  dune-project
day0/: dune  main.ml
day1/: dune  main.ml
lib/: aoc2022_lib.ml  day14lib.ml  dune  grid.ml  grid.mli  heap.ml  heap.mli  lib.ml  pos.ml  pos.mli  range.ml  range.mli  util.ml  util.mli  vec.ml  vec.mli
test/: dune
test/day1.t/: run.t
test/day10.t/: run.t
test/day11.t/: run.t
test/day12.t/: input  run.t  test  test0  test1
test/day13.t/: run.t
test/day14.t/: run.t  willa
test/day2.t/: run.t
test/day3.t/: run.t
test/day4.t/: run.t
test/day5.t/: run.t
test/day6.t/: run.t
test/day7.t/: run.t
test/day8.t/: run.t
test/day9.t/: run.t
